--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
             <ul>
                 <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
                 <li class="item"><a href="https://alpha.lmarena.ai/">... Chatbot Arena Desktop (PS: still-alpha)</a></li>
+                <li class="item"><a href="https://huggingface.co/spaces">Hugging Face Spaces</a></li>
                 <li class="item"><a href="https://openrouter.ai/">OpenRouter</a></li>
                 <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
                 <li class="item"><a href="https://ai.azure.com/"> Azure AI Studio </a></li>
@@ -379,7 +380,7 @@
 
             <ul>
                 <li class="item"><a href="https://poe.com/">Poe<span style="font-size: 0.8em; font-style: italic;"> by Quora</span></a></li>
-                <li class="item"><a href="https://duckduckgo.com/?q=DuckDuckGo&ia=chat"> DuckDuckGO Chat </a></li>
+                <li class="item"><a href="https://duckduckgo.com/?q=DuckDuckGo&ia=chat"> DuckDuckGo Chat </a></li>
                 <li class="item"><a href="https://huggingface.co/chat/">HuggingChat<span style="font-size: 0.8em; font-style: italic;"> by Hugging Face # open-source only</span></a></li>
                 <li class="item"><a href="https://groq.com/">Groq<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
                 <li class="item"><a href="https://inference.cerebras.ai/">Cerebras<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
