--- a/mobile.html
+++ b/mobile.html
@@ -373,6 +373,8 @@
                             
             <hr size="1" style="margin-left: 0;">
 
+            
+            <li class="item"><a href="https://msty.studio/welcome/">Msty Studio<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
             <li class="item"><a href="https://web.chatboxai.app/">ChatBox<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
         </ul>
     </div>
@@ -427,6 +429,7 @@
             <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
             <li class="item"><a href="https://consensus.app/search/">Consensus</a></li>         
             <li class="item"><a href="https://www.chatpdf.com/">ChatPDF</a></li>  
+            <li class="item"><a href="https://www.alphaxiv.org/explore">alphaXiv</a></li>
             <li class="item"><a href="https://www.txyz.ai/?home">txyz</a></li>
             <li class="item"><a href="https://www.explainpaper.com/">Explainpaper</a></li>           
             <li class="item"><a href="https://yiyibooks.cn/">一译<span style="font-size: 0.8em; font-style: italic;"> # Translation</span></a></li>
@@ -449,6 +452,7 @@
 
             <hr size="1" style="margin-left: 0;">
 
+            <li class="item"><a href="https://firebase.studio/">Firebase by Google</a></li>
             <li class="item"><a href="https://devv.ai/zh">DEVV</a></li>
             <li class="item"><a href="https://codeium.com/live/general">Codeium</a></li>            
             <li class="item"><a href="https://v0.dev/"> v0 <span style="font-size: 0.8em; font-style: italic;"> # by Vercel</span></a></li>
