--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin-top: 0px;
             margin-bottom: 0px;
             padding: 0;
-            background: #213144;
+            background: #1b2736;
             color: #ffffff;
         }
 
@@ -212,8 +212,8 @@
 
 
 <body>
-    <div style="background-color: #ff6600; color:#1b2736; text-align: center; padding: 20px 0; width: 100%;">
-        <h1 style="margin: 0; font-size: 1.5rem;">AI Directory</h1>
+    <div style="color:#ff6600; text-align: center; padding: 20px 0; width: 100%;">
+        <h1 style="margin: 0.5rem; font-size: 1.5rem;">AI Directory</h1>
     </div>
 
     <div style="text-align: right; margin-top: 10px; margin-bottom: 10px;">
@@ -344,7 +344,7 @@
 
             <ul>
                 <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
-                <li class="item"><a href="https://alpha.lmarena.ai/">... Chatbot Arena Desktop (PS: still-alpha)</a></li>
+                <li class="item"><a href="https://beta.lmarena.ai/">... Chatbot Arena Desktop</a></li>
                 <li class="item"><a href="https://huggingface.co/spaces">Hugging Face Spaces</a></li>
                 <li class="item"><a href="https://openrouter.ai/">OpenRouter</a></li>
                 <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
@@ -389,6 +389,7 @@
                 <hr size="1" style="width: 50%; margin-left: 0;">
 
                 <li class="item"><a href="https://msty.studio/welcome/">Msty Studio<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
+                <li class="item"><a href="https://msty.studio/data/">... Msty Studio - Data Mgmt.</a></li>
                 <li class="item"><a href="https://web.chatboxai.app/">ChatBox<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
             </ul>
         </div>
