--- a/mobile.html
+++ b/mobile.html
@@ -193,7 +193,7 @@
     </style>
 </head>
 <body>
-    <div style="background-color: #ff6600; color:rgb(3, 31, 2); text-align: center; padding: 20px 0; width: 100%;">
+    <div style="color:#ff6600; text-align: center; padding: 20px 0; width: 100%;">
         <h1 style="margin: 0; font-size: 1.5rem;">AI Directory</h1>
     </div>
 
@@ -326,7 +326,7 @@
         <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
-            <li class="item"><a href="https://alpha.lmarena.ai/">... Chatbot Arena Desktop (PS: still-alpha)</a></li>
+            <li class="item"><a href="https://beta.lmarena.ai/">... Chatbot Arena Desktop</a></li>
             <li class="item"><a href="https://huggingface.co/spaces">Hugging Face Spaces</a></li>
             <li class="item"><a href="https://openrouter.ai/">OpenRouter</a></li>      
             <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
@@ -375,6 +375,7 @@
 
             
             <li class="item"><a href="https://msty.studio/welcome/">Msty Studio<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
+            <li class="item"><a href="https://msty.studio/data/">... Msty Studio - Data Mgmt.</a></li>
             <li class="item"><a href="https://web.chatboxai.app/">ChatBox<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
         </ul>
     </div>
