--- a/mobile.html
+++ b/mobile.html
@@ -336,6 +336,7 @@
             <hr size="1" style="margin-left: 0;">
 
             <li class="item"><a href="https://makersuite.google.com/app/prompts/new_freeform">Google AI Studio</a></li>
+            <li class="item"><a href="https://labs.google/">Google Labs</a></li>      
             <li class="item"><a href="https://platform.openai.com/">OpenAI Playground</a></li>
             <li class="item"><a href="https://console.groq.com/playground">Groq Playground</a></li>
             <li class="item"><a href="https://console.anthropic.com/login?selectAccount=true&returnTo=%2Fdashboard">Anthropic Console for Claude</a></li>
@@ -407,9 +408,13 @@
     <div class="urls">
         <hr style=border-color:#ff6600>
         <ul>
-            <li class="item"><a href="https://summarize.ing/en">Summarize.ing<span style="font-size: 0.8em; font-style: italic;"> # 20/day</span></a></li>
-            <li class="item"><a href="https://www.summarize.tech/">Summarize.tech<span style="font-size: 0.8em; font-style: italic;"> # daily limits</span></a>
-            <li class="item"><a href="https://scribetube.com/">ScribeTube<span style="font-size: 0.8em; font-style: italic;"> # Transcription</span></a>
+                <li class="item"><a href="https://summarize.ing/en">Summarize.ing<span style="font-size: 0.8em; font-style: italic;"> # 20/day</span></a></li>
+                <li class="item"><a href="https://www.summarize.tech/">Summarize.tech<span style="font-size: 0.8em; font-style: italic;"> # daily limits</span></a></li>
+                <hr size="1" style="width: 50%; margin-left: 0;">                    
+                <li class="item"><a href="https://www.youtube-transcript.io/">YouTube Ttranscript<span style="font-size: 0.8em; font-style: italic;"> # Transcription</span></a>
+                <li class="item"><a href="https://notegpt.io/youtube-transcript-downloader">NoteGPT<span style="font-size: 0.8em; font-style: italic;"> # Transcription</span></a>
+                <li class="item"><a href="https://youtubetotranscript.com/">Youtube to Transcript<span style="font-size: 0.8em; font-style: italic;"> # Transcription</span></a>
+                <li class="item"><a href="https://scribetube.com/">ScribeTube<span style="font-size: 0.8em; font-style: italic;"> # Transcription</span></a>
         </ul>
     </div>
 </div>
@@ -453,6 +458,7 @@
 
             <hr size="1" style="margin-left: 0;">
 
+            <li class="item"><a href="https://deepwiki.com/">DeepWiki</a></li>      
             <li class="item"><a href="https://firebase.studio/">Firebase by Google</a></li>
             <li class="item"><a href="https://devv.ai/zh">DEVV</a></li>
             <li class="item"><a href="https://codeium.com/live/general">Codeium</a></li>            
