--- a/mobile.html
+++ b/mobile.html
@@ -410,7 +410,10 @@
         <ul>
                 <li class="item"><a href="https://summarize.ing/en">Summarize.ing<span style="font-size: 0.8em; font-style: italic;"> # 20/day</span></a></li>
                 <li class="item"><a href="https://www.summarize.tech/">Summarize.tech<span style="font-size: 0.8em; font-style: italic;"> # daily limits</span></a></li>
-                <hr size="1" style="width: 50%; margin-left: 0;">                    
+                <li class="item"><a href="https://poe.com/Summary_toPPT_ZH">Poe /  YouTube Summary in PPT Format <span style="font-size: 0.8em; font-style: italic;"> # daily limits</span></a></li>     
+
+                <hr size="1" style="width: 50%; margin-left: 0;">      
+                              
                 <li class="item"><a href="https://www.youtube-transcript.io/">YouTube Ttranscript<span style="font-size: 0.8em; font-style: italic;"> # Transcription</span></a>
                 <li class="item"><a href="https://notegpt.io/youtube-transcript-downloader">NoteGPT<span style="font-size: 0.8em; font-style: italic;"> # Transcription</span></a>
                 <li class="item"><a href="https://youtubetotranscript.com/">Youtube to Transcript<span style="font-size: 0.8em; font-style: italic;"> # Transcription</span></a>
@@ -458,6 +461,7 @@
 
             <hr size="1" style="margin-left: 0;">
 
+            <li class="item"><a href="https://www.netlify.com/">Netlify</a></li>
             <li class="item"><a href="https://deepwiki.com/">DeepWiki</a></li>      
             <li class="item"><a href="https://firebase.studio/">Firebase by Google</a></li>
             <li class="item"><a href="https://devv.ai/zh">DEVV</a></li>
