--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
             <hr style=border-color:#ff6600>
 
             <ul>
-                <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
-                <li class="item"><a href="https://beta.lmarena.ai/">... Chatbot Arena Desktop</a></li>
+                <li class="item"><a href="https://chat.lmsys.org/">LMArena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
+                <li class="item"><a href="https://beta.lmarena.ai/">... LMArena Beta</a></li>
                 <li class="item"><a href="https://huggingface.co/spaces">Hugging Face Spaces</a></li>
                 <li class="item"><a href="https://openrouter.ai/">OpenRouter</a></li>
                 <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
@@ -472,14 +472,14 @@
 
             <ul>
                 <li class="item"><a href="https://app.wordtune.com/"> Wordtune <span style="font-size: 0.8em; font-style: italic;"> by AI21 Labs</span></a></li>
-                <li class="item"><a href="https://robbiefrontend.z22.web.core.windows.net/">Robbie Email Writer</a></li>
+                <li class="item"><a href="https://poe.com/EmailResponder_YAYA">Poe / EmailResponder</a></li>
+                <li class="item"><a href="https://poe.com/Correct_English_YAYA">Poe / Correct English</a></li>
                 <li class="item"><a href="https://poe.com/10_Alt_Phrasings">Poe / 10 Alt. Phrasings</a></li>
                 
                 <hr size="1" style="width: 50%; margin-left: 0;">
 
                 <li class="item"><a href="https://www.netlify.com/">Netlify</a></li>
                 <li class="item"><a href="https://deepwiki.com/">DeepWiki</a></li>                
-                <li class="item"><a href="https://firebase.studio/">Firebase by Google</a></li>
                 <li class="item"><a href="https://devv.ai/zh">DEVV</a></li>
                 <li class="item"><a href="https://codeium.com/live/general">Codeium</a></li>            
                 <li class="item"><a href="https://v0.dev/"> v0 <span style="font-size: 0.8em; font-style: italic;"> # by Vercel</span></a></li>
@@ -521,6 +521,7 @@
             <ul>
                 <li class="item"><a href="https://portal.azure.com/#home">Azure<span style="font-size: 0.8em; font-style: italic;"> # by Micorosft</span></a></li>
                 <li class="item"><a href="https://console.cloud.google.com/vertex-ai?hl=en&project=turing-poet-416719">Vertex<span style="font-size: 0.8em; font-style: italic;"> # by Google</span></a>
+                <li class="item"><a href="https://firebase.studio/">Firebase by Google</a></li>
                 <li class="item"><a href="https://eu-central-1.console.aws.amazon.com/bedrock/home?region=eu-central-1#/">Bedrock<span style="font-size: 0.8em; font-style: italic;"> # by Amazon</span></a>
                 <li class="item"><a href="https://cloud.llamaindex.ai/"> Llama Cloud <span style="font-size: 0.8em; font-style: italic;"> # by Meta</span></a>
             </ul>
