--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
             border: 1px solid transparent; /* 预先设置透明边框 */
         }
         .section:hover {
-            border: 1px solid #ff660071;
+            border: 1px solid #ff6600;
+            box-shadow: 
+                3px 3px 5px #ff6600, /* 外阴影，橙色调 */
+                -2px -2px 3px rgba(255, 153, 51, 0.5), /* 外高光，浅橙色 */
+                inset -2px -2px 3px rgba(255, 153, 51, 0.3); /* 内高光，浅橙色 */
         }
         
         /* orange backgroud button */
@@ -287,6 +291,7 @@
        
             <ul>
                 <li class="item"><a href="https://www.perplexity.ai/">Perplexity Search</a></li>
+                <li class="item"><a href="https://www.perplexity.ai/finance">... Perplexity Finance</a></li>                
                 <li class="item"><a href="https://oo.ai//">oo.ai</a></li>
                 <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
                 <li class="item"><a href="https://websets.exa.ai/">Exa Websets</a></li>
