--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             font-size: 0.9rem;
             color: #ff6600;
             font-weight: 600;
-            margin-top: 1%;
-            margin-bottom: 1%;
+            margin-top: 5%;
+            margin-bottom: 0%;
             padding-left: 10px;
             padding-right: 10px;
             padding-top: 3.5px;
@@ -258,7 +258,6 @@
                 <li class="item"><a href="https://tingwu.aliyun.com/home">... 通义听悟</a></li>         
                 <li class="item"><a href="https://www.doubao.com/chat/">豆包 <span style="font-size: 0.8em; font-style: italic;"> by 字节</span></a></li>
                 <li class="item"><a href="https://yiyan.baidu.com/">文心一言 <span style="font-size: 0.8em; font-style: italic;"> by 百度</span></a></li>     
-
             </ul>
         </div>
 
@@ -317,8 +316,10 @@
                     "https://metaso.cn/",
                     "https://n.cn/",
                     "https://search.tiangong.cn/",
+                    "https://bochaai.com/",
                     "https://bilin.ai/",
                     "https://floatsearch.ai/",
+                    
                 ];
                 for (var i = 0; i < links.length; i++) {
                     window.open(links[i], "_blank");
@@ -334,6 +335,7 @@
                 <li class="item"><a href="https://metaso.cn/">秘塔 AI 搜索</a></li>
                 <li class="item"><a href="https://n.cn/">纳米搜索（原360搜索）</a></li>
                 <li class="item"><a href="https://search.tiangong.cn/">天工 AI 搜索</a></li>
+                <li class="item"><a href="https://bochaai.com/">博查AI搜索</a></li>
                 <li class="item"><a href="https://bilin.ai/">Bilin Search</a></li>     
                 <li class="item"><a href="https://floatsearch.ai">Float Search</a></li>
                 </ul>
