--- a/mobile.html
+++ b/mobile.html
@@ -285,7 +285,8 @@
             <li class="item"><a href="https://beago.ai/">BeaGo</a></li>
 
             <br /> 
-            <a href="https://demo.exa.ai/hallucination-detector" target="_blank" class="button-simple">Exa Hallucination-detector</a>           
+            <a href="https://demo.exa.ai/hallucination-detector" target="_blank" class="button-simple">Exa Hallucination-detector</a>
+            <br>
             <a href="https://poe.com/Search_Planner" target="_blank" class="button-simple">Poe / Search Planner</a>   
         </ul>
     </div>
@@ -301,6 +302,7 @@
                 "https://metaso.cn/",
                 "https://n.cn/",
                 "https://search.tiangong.cn/",
+                "https://bochaai.com/",
                 "https://bilin.ai/",
                 "https://floatsearch.ai/",
             ];
@@ -318,6 +320,7 @@
             <li class="item"><a href="https://metaso.cn/">秘塔 AI 搜索</a></li>
             <li class="item"><a href="https://n.cn/">纳米搜索（原360搜索）</a></li>
             <li class="item"><a href="https://search.tiangong.cn/">天工 AI 搜索</a></li>
+            <li class="item"><a href="https://bochaai.com/">博查AI搜索</a></li>
             <li class="item"><a href="https://bilin.ai/">Bilin Search</a></li>
             <li class="item"><a href="https://floatsearch.ai">Float Search</a></li>
         </ul>
