--- a/index.html
+++ b/index.html
@@ -316,7 +316,9 @@
                 <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li>
                 <li class="item"><a href="https://mulerun.com/">MuleRun</a></li>
 
+                <hr size="1" style="width: 50%; margin-left: 0;">
                 
+                <a href="Knowledge_Digest_Workflow.html" target="_self"  class="button-simple">Knowledge Digest Workflow</a>
 
             </ul>
         </div>
@@ -504,3 +506,4 @@
 
 </body>
 </html>
+
