--- a/mobile.html
+++ b/mobile.html
@@ -209,6 +209,7 @@
         <ul>
             <li class="item"><a href="https://chat.deepseek.com/">deepseek<span style="font-size: 0.8em; font-style: italic;"></span></a></li>
             <li class="item"><a href="https://tongyi.aliyun.com/">通义千问 <span style="font-size: 0.8em; font-style: italic;">by 阿里</span></a></li>   
+            <li class="item"><a href="https://chat.qwen.ai/">... Qwen</a></li>         
             <li class="item"><a href="https://tingwu.aliyun.com/home">... 通义听悟</a></li>         
             <li class="item"><a href="https://www.doubao.com/chat/">豆包 <span style="font-size: 0.8em; font-style: italic;"> by 字节</span></a></li>
             <li class="item"><a href="https://yiyan.baidu.com/">文心一言 <span style="font-size: 0.8em; font-style: italic;"> by 百度</span></a></li>     
@@ -303,6 +304,10 @@
             <li class="item"><a href="https://opal.withgoogle.com/?mode=canvas">Google Opal</a></li> 
             <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li>
             <li class="item"><a href="https://mulerun.com/">MuleRun</a></li>
+
+            <hr size="1" style="width: 50%; margin-left: 0;">
+
+            <a href="Knowledge_Digest_Workflow.html" target="_self"  class="button-simple">Knowledge Digest Workflow</a>
 
         </ul>
     </div>
