--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -80,12 +80,16 @@
             display: block;
             text-decoration: none;
             color: #E0E0E0;
-            font-size: 0.7em;
+            font-size: 0.9em;
             flex-grow: 1;
             display: flex;
             flex-direction: column;
             justify-content: center;
             text-align: center;
+        }
+
+        small {
+            font-size: 0.6em; 
         }
         
         .module > .text-block:last-child {
@@ -175,11 +179,14 @@
             <div id="predict" class="module">
                 <div class="module-title">搜索与核查</div>
                 <a href="https://www.perplexity.ai/spaces/event-search-with-focus-ApEhUwwMT_C.W0orCXgkqQ" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
-                    支持 / 反对 / 利益相关方的观点<br>
-                    专家意见 / 媒体观点<br>
-                    观点演变的时间线、影响因素<br>
-                    历史沿革的间线、关键点<br>
-                    先例事件和相似之处<br>
+                    搜索指定重点 <br>
+                    <small> 
+                    - 支持 / 反对 / 利益相关方的观点<br>
+                    - 专家意见 / 媒体观点<br>
+                    - 观点演变的时间线、影响因素<br>
+                    - 历史沿革的间线、关键点<br>
+                    - 先例事件和相似之处
+                    </small>
                 </a>
                 <a href="#" class="text-block">交叉验证 / 证据链核查</a>
                 <a href="https://www.perplexity.ai/spaces/top-10-trending-articles-on-a-r88VBBvLQnOSKhPtzVsmmw" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">话题的十大热门文章</a>
@@ -189,15 +196,18 @@
        
         <div class="row">
             <div id="predict" class="module">
-                <div class="module-title">预测推演（其他新闻）</div>
+                <div class="module-title">预测推演</div>
                 <a href="https://poe.com/Strategic-Foresight" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
-                    核心假设<br>
-                    驱动因素 <br>
-                    趋势分析 <br>
-                    宏观环境<br>
-                    直接影响 / 级联效应 <br>
-                    预测轨迹 / 推演场景<br>
-                    战略路标<br>
+                    预测推演<br>
+                    <small> 
+                        - 核心假设<br>
+                        - 驱动因素 <br>
+                        - 趋势分析 <br>
+                        - 宏观环境<br>
+                        - 直接影响 / 级联效应 <br>
+                        - 预测轨迹 / 推演场景<br>
+                        - 战略路标
+                    </small> 
                 </a>
                 <a href="#" class="text-block">探索进一步探讨的问题</a>
             </div>
@@ -206,19 +216,26 @@
                 <a href="https://poe.com/Strategic-Alert-Tel" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
                     行业新闻战略预警速报 <br>
                     （电信从业者视角） <br>
+                    <small> 
                         - 核心信号与预警评级<br>
                         - 初步影响研判<br>
                         - 核心待解问题与分析<br>
                         - 后续情报监测
+                    </small> 
                  </a>
-                <a href="https://poe.com/News-Digest-Critical" class="text-block"  style="border: 1.5px solid rgb(255, 255, 255);">
-                分析师犀利解读行业新闻<br>
-                （对抗性分析备忘录） <br>
-                    - 情景设定与叙事解构<br>
-                    - 对抗性审视<br>
-                    - 风险汇聚与决策裁定<br>
-                    - 前瞻性监测与动态推演<br>
+                <a href="https://poe.com/Analyst-Probe" class="text-block"  style="border: 1.5px solid rgb(255, 255, 255);">
+                分析师提出犀利质询<br>
+                （对抗性分析） <br>
+                    <small> 
+                        - 情景设定与叙事解构<br>
+                        - 对抗性审视<br>
+                        - 风险汇聚与决策裁定<br>
+                        - 前瞻性监测与动态推演
+                    </small> 
                 </a>
+                <a href="https://poe.com/Strategist-Probe" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
+                战略分析师提出质询 <br>
+                （对抗性分析）  </a>
             </div>
             <div id="predict" class="module">
                 <div class="module-title">多模输出</div>
