--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -224,7 +224,7 @@
                     </small> 
                  </a>
                 <a href="https://poe.com/Analyst-Probe" class="text-block"  style="border: 1.5px solid rgb(255, 255, 255);">
-                分析师提出犀利质询<br>
+                投资分析师提出犀利质询<br>
                 （对抗性分析） <br>
                     <small> 
                         - 情景设定与叙事解构<br>
@@ -252,3 +252,4 @@
 
 </body>
 </html>
+
