--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -239,7 +239,7 @@
             </div>
             <div id="predict" class="module">
                 <div class="module-title">多模输出</div>
-                <a href="https://poe.com/Strategic-Foresight" class="text-block">
+                <a href="#">
                     → Podcast <br>
                     → MindMap<br>
                     → PPT<br>
@@ -252,4 +252,5 @@
 
 </body>
 </html>
+
 
