--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -239,7 +239,7 @@
             </div>
             <div id="predict" class="module">
                 <div class="module-title">多模输出</div>
-                <a href="#">
+                <a href="#" class="text-block">
                     → Podcast <br>
                     → MindMap<br>
                     → PPT<br>
@@ -252,5 +252,6 @@
 
 </body>
 </html>
+
 
 
