--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -178,8 +178,9 @@
             </div>
             <div id="predict" class="module">
                 <div class="module-title">搜索与核查</div>
+                <a href="https://www.perplexity.ai/spaces/event-overview-shi-jian-gai-sh-SiZpS5SzQxGakWrIBpBkYQ#0" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">事件概述</a>
                 <a href="https://www.perplexity.ai/spaces/event-search-with-focus-ApEhUwwMT_C.W0orCXgkqQ" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
-                    搜索指定重点 <br>
+                    搜索事件的某个指定重点 <br>
                     <small> 
                     - 支持 / 反对 / 利益相关方的观点<br>
                     - 专家意见 / 媒体观点<br>
@@ -252,6 +253,3 @@
 
 </body>
 </html>
-
-
-
