--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -198,7 +198,7 @@
         <div class="row">
             <div id="predict" class="module">
                 <div class="module-title">预测推演</div>
-                <a href="https://poe.com/Strategic-Foresight" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
+                <a href="https://www.perplexity.ai/spaces/strategic-foresight-yu-ce-tui-U0q7fodtQHeBmtKKymQ1HA#0" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
                     预测推演<br>
                     <small> 
                         - 核心假设<br>
@@ -253,3 +253,4 @@
 
 </body>
 </html>
+
