--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -209,6 +209,8 @@
                         - 预测轨迹 / 推演场景<br>
                         - 战略路标
                     </small> 
+                    <a href="https://www.perplexity.ai/spaces/probability-spectrum-forecaste-fUae_K30TEicebX9q_hP7g#0" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">事件结果的概率预测</a>
+
                 </a>
                 <a href="#" class="text-block">探索进一步探讨的问题</a>
             </div>
@@ -253,4 +255,3 @@
 
 </body>
 </html>
-
