--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -175,6 +175,7 @@
                     识别主张 / 识别论据 / 检验连接
                 </a>
                 <a href="#" class="text-block">提炼独特观点，及其论证</a>
+                <a href="#" class="text-block">挑战核心假设</a>
             </div>
             <div id="predict" class="module">
                 <div class="module-title">搜索与核查</div>
