Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         .header{
             font-size: 1rem;
             color: #ff6600;
-            margin-top: 30px;
+            margin-top: 10px;
             padding-bottom: 1px;
             padding-left: 5px;
         }
@@ -117,12 +117,12 @@
             font-size: 0.9rem;
             color: #ff6600;
             font-weight: 600;
-            margin-top: 5%;
-            margin-bottom: 0%;
+            margin-top: 3%;
+            margin-bottom: 1%;
             padding-left: 10px;
             padding-right: 10px;
-            padding-top: 3.5px;
-            padding-bottom: 3.5px;
+            padding-top: 2px;
+            padding-bottom: 2px;
             border: 1px solid #ff6600;
             border-radius: 5px;
             background-color: transparent;
@@ -189,11 +189,11 @@
 
 
 <body>
-    <div style="color:#ff6600; text-align: center; padding: 20px 0; width: 100%;">
+    <div style="color:#ff6600; text-align: center; padding-bottom: 0px; padding-top: 30px; width: 100%;">
         <h1 style="margin: 0.5rem; font-size: 1.5rem;">AI Directory</h1>
     </div>
 
-    <div style="text-align: right; margin-top: 10px; margin-bottom: 10px;">
+    <div style="text-align: right; margin-top: 0px; margin-bottom: 10px;">
         <span style="margin-right: 30px;">
             <a href="mobile.html" target="_self"  class="button-simple">Mobile View</a>
         </span>
@@ -228,6 +228,7 @@
             <ul>
                 <li class="item"><a href="https://chat.deepseek.com/">deepseek<span style="font-size: 0.8em; font-style: italic;"></span></a></li>
                 <li class="item"><a href="https://tongyi.aliyun.com/">通义千问 <span style="font-size: 0.8em; font-style: italic;">by 阿里</span></a></li>   
+                <li class="item"><a href="https://chat.qwen.ai/">... Qwen</a></li>         
                 <li class="item"><a href="https://tingwu.aliyun.com/home">... 通义听悟</a></li>         
                 <li class="item"><a href="https://www.doubao.com/chat/">豆包 <span style="font-size: 0.8em; font-style: italic;"> by 字节</span></a></li>
                 <li class="item"><a href="https://yiyan.baidu.com/">文心一言 <span style="font-size: 0.8em; font-style: italic;"> by 百度</span></a></li>     
@@ -315,10 +316,14 @@
                 <li class="item"><a href="https://opal.withgoogle.com/?mode=canvas">Google Opal</a></li> 
                 <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li>
                 <li class="item"><a href="https://mulerun.com/">MuleRun</a></li>
+               
+                <hr size="1" style="width: 50%; margin-left: 0;">
+
+                <li class="item"><a href="https://www.google.com/finance/beta/">Google Finance</a></li> 
 
                 <hr size="1" style="width: 50%; margin-left: 0;">
-                
-                <a href="Knowledge_Digest_Workflow.html" target="_self"  class="button-simple">Knowledge Digest Workflow</a>
+
+                 <a href="Knowledge_Digest_Workflow.html" target="_self"  class="button-simple">Knowledge Digest Workflow</a>
 
             </ul>
         </div>
@@ -408,6 +413,8 @@
                 <li class="item"><a href="https://www.txyz.ai/?home">txyz</a></li>
                 <li class="item"><a href="https://www.explainpaper.com/">Explainpaper</a></li>
                 <li class="item"><a href="https://yiyibooks.cn/">一译<span style="font-size: 0.8em; font-style: italic;"> # Translation</span></a></li>
+                <li class="item"><a href="https://turbolearn.net/">TurboLearn</a></li>
+
                 <p>&nbsp⁎ <img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / GPTs: </p>
                 <p> &nbsp <a href="https://chat.openai.com/g/g-bo0FiWLY7-consensus"><span style="font-size: 0.7em;">&nbsp 🔗</span>Consensus</a>&nbsp<a href="https://chat.openai.com/g/g-NgAcklHd8-scispace"><span style="font-size: 0.7em;">&nbsp 🔗</span>SciSpace</a></p>
                 <p> &nbsp <a href="https://chat.openai.com/g/g-L2HknCZTC-scholarai"><span style="font-size: 0.7em;">&nbsp 🔗</span>ScholarAI</a>&nbsp<a href="https://chat.openai.com/g/g-UfFxTDMxq-askyourpdf-research-assistant"><span style="font-size: 0.7em;">&nbsp 🔗</span>AskYourPDF Research Asst.</a></p>
@@ -428,6 +435,7 @@
                 <hr size="1" style="width: 50%; margin-left: 0;">
 
                 <li class="item"><a href="https://www.netlify.com/">Netlify</a></li>
+                <li class="item"><a href="https://codewiki.google/">Code Wiki<span style="font-size: 0.8em; font-style: italic;"> by Google</span></a></a></li>                         
                 <li class="item"><a href="https://deepwiki.com/">DeepWiki</a></li>                
                 <li class="item"><a href="https://devv.ai/zh">DEVV</a></li>
                 <li class="item"><a href="https://codeium.com/live/general">Codeium</a></li>            
@@ -506,4 +514,3 @@
 
 </body>
 </html>
-
