Update print statement from 'Hello' to 'Goodbye'

--- a/mobile.html
+++ b/mobile.html
@@ -307,6 +307,10 @@
 
             <hr size="1" style="width: 50%; margin-left: 0;">
 
+            <li class="item"><a href="https://www.google.com/finance/beta/">Google Finance</a></li> 
+
+            <hr size="1" style="width: 50%; margin-left: 0;">
+
             <a href="Knowledge_Digest_Workflow.html" target="_self"  class="button-simple">Knowledge Digest Workflow</a>
 
         </ul>
@@ -393,6 +397,8 @@
             <li class="item"><a href="https://www.txyz.ai/?home">txyz</a></li>
             <li class="item"><a href="https://www.explainpaper.com/">Explainpaper</a></li>           
             <li class="item"><a href="https://yiyibooks.cn/">一译<span style="font-size: 0.8em; font-style: italic;"> # Translation</span></a></li>
+            <li class="item"><a href="https://turbolearn.net/">TurboLearn</a></li>
+
             <p>&nbsp⁎ <img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / GPTs: </p>
             <p> &nbsp <a href="https://chat.openai.com/g/g-bo0FiWLY7-consensus"><span style="font-size: 0.7em;">&nbsp 🔗</span>Consensus</a>&nbsp<a href="https://chat.openai.com/g/g-NgAcklHd8-scispace"><span style="font-size: 0.7em;">&nbsp 🔗</span>SciSpace</a></p>
             <p> &nbsp <a href="https://chat.openai.com/g/g-L2HknCZTC-scholarai"><span style="font-size: 0.7em;">&nbsp 🔗</span>ScholarAI</a>&nbsp<a href="https://chat.openai.com/g/g-UfFxTDMxq-askyourpdf-research-assistant"><span style="font-size: 0.7em;">&nbsp 🔗</span>AskYourPDF Research Asst.</a></p>   
@@ -414,6 +420,7 @@
             <hr size="1" style="margin-left: 0;">
 
             <li class="item"><a href="https://www.netlify.com/">Netlify</a></li>
+            <li class="item"><a href="https://codewiki.google/">Code Wiki<span style="font-size: 0.8em; font-style: italic;"> by Google</span></a></a></li>        
             <li class="item"><a href="https://deepwiki.com/">DeepWiki</a></li>      
             <li class="item"><a href="https://devv.ai/zh">DEVV</a></li>
             <li class="item"><a href="https://codeium.com/live/general">Codeium</a></li>            
