--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -176,6 +176,7 @@
                 </a>
                 <a href="#" class="text-block">提炼独特观点，及其论证</a>
                 <a href="#" class="text-block">挑战核心假设</a>
+                <a href="#" class="text-block">拆解关键要素和隐性逻辑</a>
             </div>
             <div id="predict" class="module">
                 <div class="module-title">搜索与核查</div>
