--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -218,7 +218,7 @@
             </div>
             <div id="predict" class="module">
                 <div class="module-title">行业新闻</div>
-                <a href="https://poe.com/Strategic-Alert-Tel" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
+                <a href="https://poe.com/Strategic-Warning" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
                     行业新闻战略预警速报 <br>
                     （电信从业者视角） <br>
                     <small> 
