--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -160,10 +160,10 @@
         <div class="row">
             <div id="predict" class="module">
                 <div class="module-title">总结归纳</div>
-                <a href="https://poe.com/Summary_toPPT_ZH" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">忠实原文提炼总结</a>   
-                <a href="#" class="text-block">生成 C-Suite Briefing Deck</a>
-                <a href="https://poe.com/Summary_asConsultant" class="text-block"  style="border: 1px solid rgb(255, 255, 255);">像咨询师一样总结</a>
+                <a href="https://poe.com/Summary_toPPT_ZH" class="text-block" style="border: 2px solid #3AA99F;">忠实原文总结</a>   
+                <a href="https://poe.com/Summary_asConsultant" class="text-block"  style="border: 2px solid #3AA99F;;">像咨询师一样总结</a>
                 <a href="#" class="text-block">“结构等级方式”重写</a>
+                <a href="#" class="text-block">生成 C-Suite Briefing Deck</a>
                 <a href="#" class="text-block">结构化一分钟简报</a>
             </div>
             <div id="predict" class="module">
@@ -171,8 +171,8 @@
                 <a href="#" class="text-block">提炼核心洞察</a>
                 <a href="#" class="text-block">逻辑分析师</a>
                 <a href="#" class="text-block">
-                    三个魔法问题：<br>
-                    识别主张 / 识别论据 / 检验连接
+                魔法问题：识别主张 / 识别论据 / 检验连接
+                    
                 </a>
                 <a href="#" class="text-block">提炼独特观点，及其论证</a>
                 <a href="#" class="text-block">挑战核心假设</a>
@@ -180,8 +180,8 @@
             </div>
             <div id="predict" class="module">
                 <div class="module-title">搜索与核查</div>
-                <a href="https://www.perplexity.ai/spaces/event-overview-shi-jian-gai-sh-SiZpS5SzQxGakWrIBpBkYQ#0" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">事件概述</a>
-                <a href="https://www.perplexity.ai/spaces/event-search-with-focus-ApEhUwwMT_C.W0orCXgkqQ" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
+                <a href="https://www.perplexity.ai/spaces/event-overview-shi-jian-gai-sh-SiZpS5SzQxGakWrIBpBkYQ#0" class="text-block" style="border: 2px solid #3AA99F;;">事件概述</a>
+                <a href="https://www.perplexity.ai/spaces/event-search-with-focus-ApEhUwwMT_C.W0orCXgkqQ" class="text-block" style="border: 2px solid #3AA99F;;">
                     搜索事件的某个指定重点 <br>
                     <small> 
                     - 支持 / 反对 / 利益相关方的观点<br>
@@ -192,15 +192,15 @@
                     </small>
                 </a>
                 <a href="#" class="text-block">交叉验证 / 证据链核查</a>
-                <a href="https://www.perplexity.ai/spaces/top-10-trending-articles-on-a-r88VBBvLQnOSKhPtzVsmmw" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">话题的十大热门文章</a>
-                <a href="https://www.perplexity.ai/spaces/trending-topics-future-outlook-F.rz6dOAR8qIAtZ_JKS6Cw" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">话题的趋势和展望</a>
+                <a href="https://www.perplexity.ai/spaces/top-10-trending-articles-on-a-r88VBBvLQnOSKhPtzVsmmw" class="text-block" style="border: 2px solid #3AA99F;;">话题的十大热门文章</a>
+                <a href="https://www.perplexity.ai/spaces/trending-topics-future-outlook-F.rz6dOAR8qIAtZ_JKS6Cw" class="text-block" style="border: 2px solid #3AA99F;;">话题的趋势和展望</a>
             </div>
         </div>
        
         <div class="row">
             <div id="predict" class="module">
                 <div class="module-title">预测推演</div>
-                <a href="https://www.perplexity.ai/spaces/strategic-foresight-yu-ce-tui-U0q7fodtQHeBmtKKymQ1HA#0" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
+                <a href="https://www.perplexity.ai/spaces/strategic-foresight-yu-ce-tui-U0q7fodtQHeBmtKKymQ1HA#0" class="text-block" style="border: 2px solid #3AA99F;;">
                     预测推演<br>
                     <small> 
                         - 核心假设<br>
@@ -211,14 +211,14 @@
                         - 预测轨迹 / 推演场景<br>
                         - 战略路标
                     </small> 
-                    <a href="https://www.perplexity.ai/spaces/probability-spectrum-forecaste-fUae_K30TEicebX9q_hP7g#0" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">事件结果的概率预测</a>
+                    <a href="https://www.perplexity.ai/spaces/probability-spectrum-forecaste-fUae_K30TEicebX9q_hP7g#0" class="text-block" style="border: 2px solid #3AA99F;;">事件结果的概率预测</a>
 
                 </a>
                 <a href="#" class="text-block">探索进一步探讨的问题</a>
             </div>
             <div id="predict" class="module">
                 <div class="module-title">行业新闻</div>
-                <a href="https://poe.com/Strategic-Warning" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
+                <a href="https://poe.com/Strategic-Warning" class="text-block" style="border: 2px solid #3AA99F;;">
                     行业新闻战略预警速报 <br>
                     （电信从业者视角） <br>
                     <small> 
@@ -228,7 +228,7 @@
                         - 后续情报监测
                     </small> 
                  </a>
-                <a href="https://poe.com/Analyst-Probe" class="text-block"  style="border: 1.5px solid rgb(255, 255, 255);">
+                <a href="https://poe.com/Analyst-Probe" class="text-block"  style="border: 2px solid #3AA99F;;">
                 投资分析师提出犀利质询<br>
                 （对抗性分析） <br>
                     <small> 
@@ -238,7 +238,7 @@
                         - 前瞻性监测与动态推演
                     </small> 
                 </a>
-                <a href="https://poe.com/Strategist-Probe" class="text-block" style="border: 1.5px solid rgb(255, 255, 255);">
+                <a href="https://poe.com/Strategist-Probe" class="text-block" style="border: 2px solid #3AA99F;;">
                 战略分析师提出质询 <br>
                 （对抗性分析）  </a>
             </div>
